Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24492

QWindow activated in testcase crashing Metacity

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.0.0
    • GUI: Window management
    • None
    • Ubuntu 11.04 32bit, Metacity run under Xephyr.

    Description

      Having QWindow instantiated and activated in a testcase is able to crash Metacity. Appears to be root cause for QTBUG-24462.

      What happens is Metacity printing:
      Bug in window manager: Unexpected X error: BadWindow (invalid Window parameter) serial 749 error_code 3 request_code 2 minor_code 0)

      With other window manager this worked ok, but did output a bit different X errors either from Xephyr or the window manager, such as:

      error 3 request 20 minor 0 serial 213
      error 3 request 15 minor 0 serial 214
      error 9 request 150 minor 1 serial 374

      I'm not sure if this is only Metacity bug or also Qt/XCB backend, X errors would hint that XCB is doing something wrong. Be it either one, Qt CI is using Metacity for running the tests so this is affecting development.

      Attached testcase is able to trigger this in a few iterations here.

      Attachments

        For Gerrit Dashboard: QTBUG-24492
        # Subject Branch Project Status CR V

        Activity

          People

            p2vuorel Pekka Vuorela
            p2vuorel Pekka Vuorela
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes